; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_sd-journal.c_dirent_is_journal_file.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_sd-journal.c_dirent_is_journal_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i32, i32 }

@DT_REG = common dso_local global i32 0, align 4
@DT_LNK = common dso_local global i32 0, align 4
@DT_UNKNOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c".journal\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c".journal~\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dirent*)* @dirent_is_journal_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dirent_is_journal_file(%struct.dirent* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dirent*, align 8
  store %struct.dirent* %0, %struct.dirent** %3, align 8
  %4 = load %struct.dirent*, %struct.dirent** %3, align 8
  %5 = call i32 @assert(%struct.dirent* %4)
  %6 = load %struct.dirent*, %struct.dirent** %3, align 8
  %7 = getelementptr inbounds %struct.dirent, %struct.dirent* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @DT_REG, align 4
  %10 = load i32, i32* @DT_LNK, align 4
  %11 = load i32, i32* @DT_UNKNOWN, align 4
  %12 = call i32 @IN_SET(i32 %8, i32 %9, i32 %10, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %30

15:                                               ; preds = %1
  %16 = load %struct.dirent*, %struct.dirent** %3, align 8
  %17 = getelementptr inbounds %struct.dirent, %struct.dirent* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i64 @endswith(i32 %18, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %27, label %21

21:                                               ; preds = %15
  %22 = load %struct.dirent*, %struct.dirent** %3, align 8
  %23 = getelementptr inbounds %struct.dirent, %struct.dirent* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @endswith(i32 %24, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %21, %15
  %28 = phi i1 [ true, %15 ], [ %26, %21 ]
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %27, %14
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @assert(%struct.dirent*) #1

declare dso_local i32 @IN_SET(i32, i32, i32, i32) #1

declare dso_local i64 @endswith(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
